load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/Steve-Nzr/go-ff/cmd/action",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/action/packets/incoming:go_default_library",
        "//pkg/def/packet/packettype:go_default_library",
        "//pkg/service/cache:go_default_library",
        "//pkg/service/dotenv:go_default_library",
        "//pkg/service/external:go_default_library",
        "//pkg/service/messaging:go_default_library",
    ],
)

go_image(
    name = "go_default_image",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)
