load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "moving.go",
        "position.go",
        "statistics.go",
    ],
    importpath = "go-ff/pkg/def/component",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_geo//r3:go_default_library"],
)
