load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["inventory.go"],
    importpath = "go-ff/pkg/feature/inventory",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/feature/inventory/def:go_default_library",
        "//pkg/service/database:go_default_library",
        "//pkg/service/external:go_default_library",
    ],
)
