load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "messaging.go",
        "publisher.go",
        "subscriber.go",
        "topics.go",
    ],
    importpath = "github.com/Steve-Nzr/go-ff/pkg/service/messaging",
    visibility = ["//visibility:public"],
    deps = ["@com_github_streadway_amqp//:go_default_library"],
)
