load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["chat.go"],
    importpath = "go-ff/cmd/chat/packets/incoming",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/chat/packets/outgoing:go_default_library",
        "//pkg/service/cache:go_default_library",
        "//pkg/service/external:go_default_library",
        "//pkg/service/messaging:go_default_library",
    ],
)
