load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["chat.go"],
    importpath = "github.com/Steve-Nzr/go-ff/cmd/chat/packets/outgoing",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/def/packet/snapshottype:go_default_library",
        "//pkg/service/cache:go_default_library",
        "//pkg/service/external:go_default_library",
    ],
)
