load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "disconnect.go",
        "join.go",
    ],
    importpath = "go-ff/cmd/entity/packets/incoming",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/entity/packets/outgoing:go_default_library",
        "//pkg/service/cache:go_default_library",
        "//pkg/service/database:go_default_library",
        "//pkg/service/external:go_default_library",
        "//pkg/service/messaging:go_default_library",
    ],
)
