load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "despawn.go",
        "spawn.go",
    ],
    importpath = "github.com/Steve-Nzr/go-ff/cmd/entity/packets/outgoing",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/def/packet/snapshottype:go_default_library",
        "//pkg/feature/inventory:go_default_library",
        "//pkg/feature/inventory/def:go_default_library",
        "//pkg/service/cache:go_default_library",
        "//pkg/service/external:go_default_library",
        "@com_github_ahmetb_go_linq//:go_default_library",
    ],
)
