load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "behaviour.go",
        "move.go",
    ],
    importpath = "go-ff/cmd/moving/packets/incoming",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/moving/def/packets:go_default_library",
        "//cmd/moving/feature/move:go_default_library",
        "//cmd/moving/packets/outgoing:go_default_library",
        "//pkg/service/cache:go_default_library",
        "//pkg/service/external:go_default_library",
        "//pkg/service/messaging:go_default_library",
        "@com_github_golang_geo//r3:go_default_library",
    ],
)
