load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["unequip.go"],
    importpath = "go-ff/pkg/feature/inventory/helpers",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/feature/inventory:go_default_library",
        "//pkg/feature/inventory/def:go_default_library",
        "//pkg/feature/inventory/packets/outgoing:go_default_library",
        "//pkg/service/cache:go_default_library",
        "//pkg/service/external:go_default_library",
        "//pkg/service/messaging:go_default_library",
    ],
)
